--- a/templates/index.html
+++ b/templates/index.html
@@ -1,47 +1,20 @@
-<!DOCTYPE HTML>
-<!--
-	Retrospect by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
-<html>
+{% extends "base.html"%}
+{% load staticfiles %}
+{%block title%}Mohit Reddy{%endblock%}
+{%block script%}var d = document.getElementById("header");
+d.className += "alt";{%endblock%}
 
-	<head>
-        {% load staticfiles %}
-		<title>Mohit Reddy</title>
-        <link rel="icon" href="{% static 'images/title_image_48x48.jpg' %}">
-        <link rel="stylesheet" href="{% static 'assets/css/slideshow.css' %}" />
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="{% static 'assets/js/ie/html5shiv.js' %}"></script><![endif]-->
-		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
-        <link rel="stylesheet" href="{% static 'assets/css/projectAnimation.css' %}"/>
-        <link rel="stylesheet" href="{% static 'assets/css/academics.css' %}">
-		<!--[if lte IE 8]><link rel="stylesheet" href="{% static 'assets/css/ie8.css' %}" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="{% static 'assets/css/ie9.css' %}" /><![endif]-->
-	</head>
-	<body class="landing">
+{%block header%}
+<header id="header" class="alt">
+    <h1><a href="/">Mohit Reddy</a></h1>
+    <a href="#nav">Menu</a>
+</header>
+{%endblock%}
 
-		<!-- Header -->
-			<header id="header" class="alt">
-				<h1><a href="/">Mohit Reddy,</a> <p1>~aka mohitreddy1996</p1></h1>
-				<a href="#nav">Menu</a>
-			</header>
 
-		<!-- Nav -->
-			<nav id="nav">
-				<ul class="links">
-					<li><a href="/">Home</a></li>
-					<li><a href="/projects/">Projects</a></li>
-					<li><a href="/experience/">Experience</a></li>
-					<li><a href="/academics/">Academics</a></li>
-					<li><a href="https://drive.google.com/file/d/0B8c0Bnt30GX0Wk1fcXFkRVRDZkU/view?usp=sharing" target="_blank">Resume</a></li>
-					<li><a href="/#contact_me">Contact Me</a></li>
-				</ul>
-			</nav>
+{%block content%}
 
-		<!-- Banner -->
-			<section id="banner">
+            <section id="banner">
 				<h2>Hello World!</h2>
 				<p>Welcome To My Personal Website</p>
                 <div class="links">
@@ -59,6 +32,7 @@
                     </a>
                 </div>
 			</section>
+
 
         <section id="one" class="wrapper special">
             <div class="inner">
@@ -191,41 +165,4 @@
 			</section>
         </div>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-                        <li><a href="https://www.facebook.com/mohit.reddy.5" class="icon fa-facebook" target="_blank">
-                            <span class="label">Facebook</span>
-                        </a></li>
-                        <li><a href='mailto:mohitreddy1996@gmail.com' class="icon fa-google" target="_blank">
-                            <span class="label">Gmail</span>
-                        </a></li>
-                        <li><a href="https://github.com/mohitreddy1996" class="icon fa-github" target="_blank">
-                            <span class="label">Github</span>
-                        </a></li>
-                        <li><a href="https://linkedin.com/in/mohitreddy1996" class="icon fa-linkedin" target="_blank">
-                            <span class="label">LinkedIn</span>
-                        </a></li>
-					</ul>
-                    <ul class="copyright">
- 						<li>&copy; 2016, Mohit Reddy</li>
- 						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
- 						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
- 					</ul>
-				</div>
-
-			</footer>
-
-		<!-- Scripts -->
-            <script src="{% static 'assets/js/slideshow.js' %}"></script>
-			<script src="{% static 'assets/js/jquery.min.js' %}"></script>
-			<script src="{% static 'assets/js/skel.min.js' %}"></script>
-			<script src="{% static 'assets/js/util.js' %}"></script>
-            <script src="{% static 'assets/js/quotes.js' %}"></script>
-			<!--[if lte IE 8]><script src="{% static 'assets/js/ie/respond.min.js' %}"></script><![endif]-->
-			<script src="{% static 'assets/js/main.js' %}"></script>
-            <script src="{% static 'assets/js/scroll.js' %}"></script>
-
-	</body>
-</html>
+{%endblock%}
