Academics bug fixed

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
 		<!--[if lte IE 8]><script src="{% static 'assets/js/ie/html5shiv.js' %}"></script><![endif]-->
 		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
         <link rel="stylesheet" href="{% static 'assets/css/projectAnimation.css' %}"/>
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="{% static 'assets/css/academics.css' %}">
 		<!--[if lte IE 8]><link rel="stylesheet" href="{% static 'assets/css/ie8.css' %}" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="{% static 'assets/css/ie9.css' %}" /><![endif]-->
@@ -72,6 +73,7 @@
 			<!--[if lte IE 8]><script src="{% static 'assets/js/ie/respond.min.js' %}"></script><![endif]-->
 			<script src="{% static 'assets/js/main.js' %}"></script>
             <script src="{% static 'assets/js/scroll.js' %}"></script>
+            <script src="{% static 'assets/js/accordion.js' %}"></script>
 
 	</body>
 </html>
