Academic/Experience Changes

--- a/templates/academics.html
+++ b/templates/academics.html
@@ -43,7 +43,7 @@
 
                             <br>
                             <h5 style="display: inline;">Cumulative GPA: &nbsp;</h5>
-                            <p class="show_inline" style="display: inline;">8.85/10.0 &nbsp;(As of August 2016).</p>
+                            <p class="show_inline" style="display: inline;">8.55/10.0 &nbsp;(As of January 2017).</p>
 
                             <br>
                             <h5 style="display: inline;">Admission Test: &nbsp;</h5>
@@ -64,15 +64,22 @@
                                 <li>Computer Organization and Architecture</li>
                                 <li>Design of Digital Systems</li>
                                 <li>Object Oriented Programming</li>
-                            </ul>
-                            <h5 style="display: inline;">List of On-going courses: &nbsp;</h5>
-                            <ul style="columns: 3;">
                                 <li>Graph Theory</li>
                                 <li>Information Security</li>
                                 <li>Unix Programming and Networking</li>
                                 <li>Database Management Systems</li>
                                 <li>Computer Networks</li>
                                 <li>Engineering Economics</li>
+                            </ul>
+                            <h5 style="display: inline;">List of On-going courses: &nbsp;</h5>
+                            <ul style="columns: 3;">
+                                <li>Distributed Computing</li>
+                                <li>Advanced Computer Networks</li>
+                                <li>Linear Algebra and Matrices</li>
+                                <li>Compiler Design</li>
+                                <li>Principles of Management</li>
+                                <li>Compiler Design Lab</li>
+                                <li>Computer Graphics</li>
                             </ul>
 
 
