--- a/templates/experience.html
+++ b/templates/experience.html
@@ -32,7 +32,7 @@
                 <img src="{% static 'images/bigclozet.jpg' %}" style="max-width: 300px; max-height: 300px; float: right; margin-right: 40px;">
 
                 <div class="exp_heading">
-                    <a href="https://www.bigclozet.com/">Biclozet, Bangalore, India.</a>
+                    <a href="https://www.bigclozet.com/">Bigclozet, Bangalore, India.</a>
                 </div>
                 <p><b>About the Organisation</b></p>
                 <p>Bigclozet is a women fashion aggregator. Items from different E-Commerce websites are displayed on a single platform.</p>
@@ -41,16 +41,23 @@
                     <li>
                         Implemented Edge detection and face detection algorithms in Python using OpenCV2 to detect foreground
                         in images to maintain consistency (Aligning the foreground in the centre of the image) among images. Major reason
-                        for the project was to decrease the loading time of the items on the website and android. Images previously were larger
-                        in size (60-120Kb), were majorly in png format, images among different sellers had different consistency.
+                        for the project was to decrease the loading time of the items on the website and android device. Images previously were larger
+                        in larger size (60-120Kb) and were majorly in png format.
                     </li>
                     <li>
                         Designed and Implemented a recommendation system using JAVA. Major part of the project was to build a user profile, using which recommendations
                         will be given. User Profile was further planned to use for personal feed and notifications for a particular user.
-                        Project required a knowledge about recommendation algorithms. Good amount of project was dedicated to reading different papers by organizations
+                        Project required a good knowledge about recommendation algorithms. Good amount of project time was devoted for reading different papers by organizations
                         like Netflix, Amazon, Spotify etc and comparing their algorithms.
                     </li>
                 </ul>
+                <b>Technical Skills learnt/used: </b>
+                <br>
+                <b>Languages: </b>Java, Python.
+                <br>
+                <b>Databases: </b>MongoDB
+                <br>
+                <b>Frameworks/Tools: </b>Elastic Search, Grafana, PyCharm, IntelliJ IDEA, MongoChef.
 
             </div>
         </div>
