--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@ d.className += "alt";{%endblock%}
                 <div class="row">
                     <div class="col-1">
                         <header class="major narrow">
-                            <div class="heading_class2"> About Me</div>
+                            <div class="heading_class2">About Me</div>
 							<div class="customised_hr"></div>
                             <div class="customised_para">I am a junior year undergraduate student from India. I love to code. Also to learn
                             and try new fields of computer science. I like working as a team. As the saying goes: 'two heads work better than one'. I love travelling and making new friends. </div>
@@ -113,7 +113,7 @@ d.className += "alt";{%endblock%}
                         <br>
                         <ul class="actions">
                             <li>
-                                <a href="#" class="button alt">Know More</a>
+                                <a href="/experience/" class="button alt">Know More</a>
                             </li>
                         </ul>
                     </div>
