--- a/templates/experience.html
+++ b/templates/experience.html
@@ -1,14 +1,9 @@
 
 {% extends "base.html"%}
 {% load staticfiles %}
-{%block title%}Experience{%endblock%}
+{%block title%}Experience | mohitreddy1996{%endblock%}
 {%block script%}{%endblock%}
 
-{%block header%}
-<header id="header">
-    <h1><a href="/">Mohit Reddy</a></h1>
-    <a href="#nav">Menu</a>
-</header>{%endblock%}
 
 {%block content%}
 		<!-- Main -->
