--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,8 @@
 {% extends "base.html"%}
 {% load staticfiles %}
-{%block title%}Mohit Reddy{%endblock%}
+{%block title%}Mohit Reddy | mohitreddy1996{%endblock%}
 {%block script%}var d = document.getElementById("header");
 d.className += "alt";{%endblock%}
-
-{%block header%}
-<header id="header" class="alt">
-    <h1><a href="/">Mohit Reddy</a></h1>
-    <a href="#nav">Menu</a>
-</header>
-{%endblock%}
-
 
 {%block content%}
 
