--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
         <script>{%block script%}{%endblock%}</script>
         <link rel="icon" href="{% static 'images/title_image_48x48.jpg' %}">
         <link rel="stylesheet" href="{% static 'assets/css/slideshow.css' %}" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="{% static 'assets/js/ie/html5shiv.js' %}"></script><![endif]-->
@@ -22,13 +23,31 @@
     <body class="landing">
 
 		<!-- Header -->
-        {%block header%}{%endblock%}
+        {%block header%}
+		<header id="header">
+			<h1><a href="/">Mohit Reddy</a></h1>
+			<a href="https://www.facebook.com/mohit.reddy.5" class="icon fa-facebook" target="_blank">
+				<span class="label">Facebook</span>
+			</a>
+			<a href='mailto:mohitreddy1996@gmail.com' class="icon fa-google" target="_blank">
+				<span class="label">Gmail</span>
+			</a>
+			<a href="https://github.com/mohitreddy1996" class="icon fa-github" target="_blank">
+				<span class="label">Github</span>
+			</a>
+			<a href="https://linkedin.com/in/mohitreddy1996" class="icon fa-linkedin" target="_blank">
+				<span class="label">LinkedIn</span>
+			</a>
+			<a href="#nav">Menu</a>
+		</header>
+		{%endblock%}
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="/">Home</a></li>
 					<li><a href="/projects/">Projects</a></li>
 					<li><a href="/experience/">Experience</a></li>
+                    <li><a href="/blog/">Blog</a></li>
 					<li><a href="/academics/">Academics</a></li>
 					<li><a href="https://goo.gl/ObhgMp" target="_blank">Resume</a></li>
 					<li><a href="/#contact_me">Contact Me</a></li>
@@ -56,7 +75,7 @@
                         </a></li>
 					</ul>
                     <ul class="copyright">
- 						<li>&copy; 2016, Mohit Reddy</li>
+ 						<li>&copy; 2017, Mohit Reddy</li>
  						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
  						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
  					</ul>
@@ -74,6 +93,9 @@
 			<script src="{% static 'assets/js/main.js' %}"></script>
             <script src="{% static 'assets/js/scroll.js' %}"></script>
             <script src="{% static 'assets/js/accordion.js' %}"></script>
+            <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
 	</body>
 </html>
