--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,13 +1,8 @@
 {% extends "base.html"%}
 {% load staticfiles %}
-{%block title%}Projects{%endblock%}
+{%block title%}Projects | mohitreddy1996{%endblock%}
 {%block script%}{%endblock%}
 
-{%block header%}
-<header id="header">
-    <h1><a href="/">Mohit Reddy</a></h1>
-    <a href="#nav">Menu</a>
-</header>{%endblock%}
 
 {%block content%}
     <section id="main" class="wrapper">
