Blog Templating started

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -27,7 +27,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Google Interview Experience</h4>
                         <p class="card-text">My thoughts on the Google Internship Interviews, Host Matching Interviews and more.</p>
-                        <a href="#" class="btn btn-primary">Read About It!</a>
+                        <a href="/blog/google-intern" class="btn btn-primary">Read About It!</a>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Microsoft Interview Experience</h4>
                         <p class="card-text">My thoughts on the Microsoft Internship Interviews and more.</p>
-                        <a href="#" class="btn btn-primary">Read About It!</a>
+                        <a href="/blog/microsoft-intern" class="btn btn-primary">Read About It!</a>
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Bigclozet Interview Experience</h4>
                         <p class="card-text">My Interview and Working Experience as a Intern at Bigclozet during Summer 2016.</p>
-                        <a href="#" class="btn btn-primary">Read About It!</a>
+                        <a href="/blog/bigclozet-intern" class="btn btn-primary">Read About It!</a>
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                     <div class="card-block">
                         <h4 class="card-title">IIT Bombay Ekalavya Program</h4>
                         <p class="card-text">How I got the Internship Offer from IIT Bombay Ekalavya Program for Summer 2016.</p>
-                        <a href="#" class="btn btn-primary">Read About It!</a>
+                        <a href="/blog/iitbombay-intern" class="btn btn-primary">Read About It!</a>
                     </div>
                 </div>
             </div>
