--- a/templates/experience.html
+++ b/templates/experience.html
@@ -16,6 +16,25 @@
         </header>
         <hr class="style-seven">
 
+        <div class="experience3">
+            <header>
+                <h3>
+                    Software Engineering Intern (8th May 2017 - 4th August 2017)
+                </h3>
+            </header>
+
+            <div class="inner" style="margin-left: 40px;">
+                <!-- Insert the Image and ahref to the company.  -->
+                <div class="exp_heading">
+                    <a href="https://www.google.com/">Google, Zurich, Switzerland.</a>
+                </div>
+
+                <h3>Will update it once intern ends.</h3>
+            </div>
+        </div>
+
+        <hr class="style-seven">
+
         <div class="experience2">
             <header>
                 <h3>
